# PLFM_RADAR

./: .pre-commit-config.yaml  pyproject.toml
9_Firmware/9_1_Microcontroller/9_1_1_C_Cpp_Libraries/: DAC5578.c
9_Firmware/9_1_Microcontroller/9_1_3_C_Cpp_Code/: main.cpp
9_Firmware/9_2_FPGA/: radar_receiver_final.v  radar_system_top.v  run_regression.sh
9_Firmware/9_3_GUI/: GUI_versions.txt  radar_dashboard.py  radar_protocol.py  requirements-lock.txt  requirements_dashboard.txt  smoke_test.py  test_radar_dashboard.py
9_Firmware/9_3_GUI/archive/: GUI_V1.py  GUI_V2.py  GUI_V3.py  GUI_V4.py  GUI_V4_2_CSV.py  GUI_V5_Demo.py  GUI_V6.py  GUI_V6_Demo.py  README.md
